--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "test": "forge test",
-    "split": "bun run scripts/split-proof.ts"
+    "split-proof": "bun run scripts/split-proof.ts"
   },
   "devDependencies": {
     "@types/bun": "latest",
